refactor to some es6 features

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </label>
     <div id="todos"></div>
 
+<script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
 <script src="app-functions.js"></script>
 <script src="app.js"></script>
 </body>
