--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,7 @@
     </div>
     
 
-    
 
-<script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
-<script src="/scripts/app-functions.js"></script>
-<script src="/scripts/app.js"></script>
+<script src="/scripts/bundle.js"></script>
 </body>
 </html>
